2008-08-05  Richard Dale  <richard.j.dale@gmail.com>
* Add some new plasma classes Plasma::Frame, Plasma::PaintUtils, 
  Plasma::PopupApplet, Plasma::Slider, Plasma::TabBar and 
  Plasma::ToolTipManager

2008-07-08  Arno Rehn  <arno@arnorehn.de>
* Put the PlasmaScriptengineKimono.* classes all in one assembly.

2008-07-08  Richard Dale  <richard.j.dale@gmail.com>
* Added a marshaller for the Plasma::DataEngine::Data type so that 
  DateUpdated() slots should work
* Fixed overriden virtual methods in the Tiger applet so they work by addding
  the 'override' keyword to the declarations.

2008-07-07  Richard Dale  <richard.j.dale@gmail.com>
* Added a tiger example C# applet. It wasn't possible to build an executable
  called 'main' as mono gave an error about it not having an extension.
  Maybe some sort of special cmake macro is needed for building C# plasmoids.
* When looking for event handlers which have been overriden use the 
  BindingFlags.Declared option on GetMethod() to avoid picking up the
  inherited ones, which will always be there. TODO: The code should really
  look at all types in the heirachy for event handlers until it reaches the
  PlasmaScripting.Applet type.

2008-07-06  Arno Rehn  <arno@arnorehn.de>

	* Moved the PlasmaScripting.* classes back into the main plasma assembly,
	  since we can't reference Applet.dll and DataEngine.dll for C# Plasma
	  plugins.

2008-07-06  Richard Dale  <richard.j.dale@gmail.com>
* Add a PlasmaScripting.QGraphicsWidget class with all the public methods in
  the QGraphicsWidget/QGraphicsItem/QGraphicsLayoutItem heirarchy implemented
  by forwarding the calls to the underlying Plasma.Applet.
* Implemented event handling method overrides via an event filter in the
  Applet ScriptEngine
* Added a .desktop file for the DataEngine script engine
* The Plasma sources have been regenerated with tabs replaced with spaces.
  The methods on the Plasma.DataEngineScripting class special cased so that