@@ -42,9 +42,30 @@ namespace PlasmaScriptengineKimono {
             QFileInfo program = new QFileInfo(MainScript());
 
             appletAssembly = Assembly.LoadFile(program.AbsoluteFilePath());
+            
+            // the newly loaded assembly might contain reference other bindings that need to be initialized
+            foreach (Assembly a in AppDomain.CurrentDomain.GetAssemblies()) {
+                // if the binding has already been initialized (e.g. in SmokeInvocation.InitRuntime()), continue.
+                if (SmokeInvocation.InitializedAssemblies.Contains(a)) continue;
+                AssemblySmokeInitializer attr = (AssemblySmokeInitializer) Attribute.GetCustomAttribute(a, typeof(AssemblySmokeInitializer));
+                if (attr != null) attr.CallInitSmoke();
+                SmokeInvocation.InitializedAssemblies.Add(a);
+            }
+            
             string typeName = Camelize(Package().Metadata().PluginName()) + ".";  // namespace
             typeName += Camelize(program.CompleteBaseName());
             appletType = appletAssembly.GetType(typeName);
+            if (appletType == null) {
+                foreach (Type t in appletAssembly.GetTypes()) {
+                    for (Type tmp = t.BaseType; tmp != null; tmp = tmp.BaseType) {
+                        if (tmp == typeof(PlasmaScripting.Applet)) {
+                            appletType = t;
+                            break;
+                        }
+                    }
+                    if (appletType != null) break;
+                }
+            }
 
             applet = (PlasmaScripting.Applet) Activator.CreateInstance(appletType, new object[] { this });
             applet.Init();
