@@ -1,3 +1,9 @@
+2008-08-09  Arno Rehn  <arno@arnorehn.de>
+* If necessary, initialize additional bindings in the ScriptEngine.
+* If the class with the name of the main assembly and in the namespace
+  with the name of the parent directory is not found, look for classes that
+  inherit from PlasmaScripting.Applet and choose the first one.
+
 2008-08-05  Richard Dale  <richard.j.dale@gmail.com>
 * Add some new plasma classes Plasma::Frame, Plasma::PaintUtils, 
   Plasma::PopupApplet, Plasma::Slider, Plasma::TabBar and 
